welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: ';' expected but 'for' found.
  } for (i<- 1 to 6){
    ^